# light_framework_mk2

./: .gitmodules  CMakeLists.txt
lib/light_message/include/: light_message.h
module/light_framework/: CMakeLists.txt  memmap_light.ld  objects.host.ld  objects.rp2040.ld
module/light_framework/include/: light.h
module/light_framework/src/: framework.c
module/light_platform/: CMakeLists.txt
module/light_platform/include/: light_platform.h
module/light_platform/src/: platform.c  platform_internal.h
platform/arch/: CMakeLists.txt
platform/arch/arm32_m/: CMakeLists.txt
platform/arch/arm32_m/include/: arm32_m.h
platform/board/: CMakeLists.txt
platform/board/bluepill_plus/: CMakeLists.txt
platform/board/bluepill_plus/include/board/: bluepill_plus.h
platform/board/bluepill_plus/src/: bluepill_plus.c
platform/board/pico/: CMakeLists.txt
platform/board/pico/include/board/: pico.h
platform/board/pico/src/: pico.c
platform/board/pico_w/: CMakeLists.txt
platform/board/pico_w/include/board/: pico_w.h
platform/board/pico_w/src/: pico_w.c
platform/chip/: CMakeLists.txt
platform/chip/rp2040/: CMakeLists.txt
platform/chip/rp2040/include/: light_chip.h
platform/chip/stm32f103/: CMakeLists.txt
test/framework_demo/: CMakeLists.txt
test/framework_demo/src/: framework_demo.c
